--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	implementation 'org.hibernate:hibernate-core'
 
 	implementation 'org.modelmapper:modelmapper:3.1.0'
+
+	// Rate limit
+	implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
 }
 
 tasks.named('test') {
