--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,12 @@ repositories {
 	mavenCentral()
 }
 
+bootJar {
+	enabled = true
+	archivesBaseName = 'reserve'
+	archiveFileName = 'reserve.jar'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.7.5'
